tests/NormalTests/paczka1/fuzzy1/61885607.err
Error in line 1: nHY S345 55,5
Error in line 28: nHY A855 367,0
Error in line 22: A855 S345 66,2
Error in line 39: lal A471 -1,8
